# photoshop_2

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml
Imagens-PSE/: 01_ruido_mediana.pgm  02_baixo_contraste.pgm  03_casa_original.pgm  04_casa_modificada.pgm  05_mascara_5x5.pgm  checkerboard.pgm
assets/images/: teste.pgm
img_process/: easy_process.py  local_process.py  pop_mask.py  util.py
interface/: interface.py
models/: models.py
others/: complement_image.py  differences.py  histogram_generator.py  histrogram_generator.py  morphological_operation.py
src/: __init__.py  __main__.py
src/application/: __init__.py  execution_service.py  project_service.py
src/blocks/: __init__.py  analysis_blocks.py  base.py  filter_blocks.py  io_blocks.py  point_blocks.py
src/domain/: __init__.py  complement.py  conversion.py  convolution.py  difference.py  filters.py  histogram.py  morphology.py  point.py  types.py
src/graph/: __init__.py  connection.py  errors.py  executor.py  node.py  workspace.py
src/gui/: __init__.py  app.py  drag_mime.py  main_window.py  theme.py
src/gui/canvas/: __init__.py  connection_item.py  graph_scene.py  graph_view.py  node_item.py  port_item.py
src/gui/dialogs/: __init__.py  block_setup.py  histogram_dialog.py  layout_helpers.py  (+2 more)
src/infrastructure/: __init__.py  file_dialogs.py  image_loader.py  pgm_codec.py
tests/: test_convolution.py  test_executor.py  test_filters.py  test_graph_executor.py  test_infrastructure.py  test_point.py  test_workspace.py
(+9 files in other folders)
